# super_enum

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
tests/: basic.rs
