[workspace]
members = ["macros"]

[package]
name = "super_enum"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["sam0x17"]
description = "super_enum allows for compile-time aggregated enums and an easy synatx for defining 'fields' shared between all enum variants."
keywords = ["enum", "aggregated", "fields", "macros", "compile-time"]
repository = "https://github.com/sam0x17/super_enum"

[dependencies]
super_enum_macros = { path = "macros", version = "0.0.1" }
